--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
     "vue-tsc": "1.4.4"
   },
   "dependencies": {
-    "electron-updater": "5.3.0"
+    "electron-updater": "5.3.0",
+    "iconv-lite": "^0.6.3",
+    "music-metadata": "^7.13.4",
+    "sqlite3": "^5.1.6"
   }
 }
