--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "electron-updater": "5.3.0",
+    "find-install-path": "^1.0.0",
     "iconv-lite": "^0.6.3",
     "music-metadata": "^7.13.4",
     "sqlite3": "^5.1.6"
