--- a/package.json
+++ b/package.json
@@ -19,14 +19,19 @@
     "postinstall": "cross-env ELECTRON_RUN_AS_NODE=1 electron other/scripts/update-electron-vendors.mjs"
   },
   "devDependencies": {
+    "@vicons/carbon": "^0.12.0",
+    "@vicons/fluent": "^0.12.0",
     "@vitejs/plugin-vue": "4.2.1",
+    "autoprefixer": "^10.4.14",
     "cross-env": "7.0.3",
     "electron": "24.1.2",
     "electron-builder": "23.6.0",
     "happy-dom": "9.9.2",
     "nano-staged": "0.8.0",
     "playwright": "1.32.3",
+    "postcss": "^8.4.23",
     "simple-git-hooks": "2.8.1",
+    "tailwindcss": "^3.3.2",
     "unplugin-auto-expose": "0.0.4",
     "vite": "4.3.2",
     "vue": "3.2.47",
@@ -35,10 +40,9 @@
   "dependencies": {
     "find-install-path": "^1.0.0",
     "electron-updater": "5.3.0",
-    "bonjour-service": "^1.1.1",
     "music-metadata": "^7.13.4",
     "iconv-lite": "^0.6.3",
-    "sqlite3": "^5.1.6",
-    "md5": "^2.3.0"
+    "md5": "^2.3.0",
+    "sqlite3": "^5.1.6"
   }
 }
