--- a/package.json
+++ b/package.json
@@ -25,14 +25,9 @@
     "cross-env": "7.0.3",
     "electron": "24.1.2",
     "electron-builder": "23.6.0",
-    "happy-dom": "9.9.2",
-    "nano-staged": "0.8.0",
-    "playwright": "1.32.3",
-    "simple-git-hooks": "2.8.1",
     "unplugin-auto-expose": "0.0.4",
     "vite": "4.3.2",
-    "vue": "3.2.47",
-    "vue-tsc": "1.4.4"
+    "vue": "3.2.47"
   },
   "dependencies": {
     "electron-updater": "5.3.0",
