--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "name": "Skay Zhang",
     "url": "https://github.com/skay-zhang"
   },
+  "license": "MIT",
   "main": "dist/main.cjs",
   "scripts": {
     "build": "npm run build:main && npm run build:preload && npm run build:page",
