--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "private": true,
   "author": {
     "email": "skai-zhang@hotmail.com",
-    "name": "Skay Zhang",
-    "url": "https://github.com/skay-zhang"
+    "name": "Skye Zhang",
+    "url": "https://github.com/skye-z"
   },
   "license": "MIT",
   "main": "dist/main.cjs",
